Mise en place de l'environnement et commencement "header/main"

--- a/Ohmyfood.html
+++ b/Ohmyfood.html
@@ -6,10 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/72676ec4b6.js" crossorigin="anonymous"></script>
+    <!-- Est-ce bon comme lien ? -->
     <title>Ohmyfood!</title>
 </head>
 
+
+
 <body>
+    <header>
+        <nav class="nav-header">
+            <a class="nav-logo" href="#">
+                <!-- Ajouter un ID -->
+                <img src="Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
+            </a>
+        </nav>
+
+        <section class="location">
+            <i class="fas fa-map-marker-alt"></i>
+            <span class="location-text">Paris, Belleville</span>
+        </section>
+
+    </header>
+
+    <main>
+        <section class="welc-side">
+            <h2>Réservez le menu qui vous convient</h2>
+            <span>Découvrez des restaurants d'exception, séléctionnés par nos soins</span>
+            <a class="explore-link" href="#">Explorer nos restaurants</a> <!-- Ajouter un ID  -->
+
+        </section>
+
+
+    </main>
 
 </body>
 
