--- a/Ohmyfood.html
+++ b/Ohmyfood.html
@@ -18,7 +18,7 @@
         <nav class="nav-header">
             <a class="nav-logo" href="#">
                 <!-- Ajouter un ID -->
-                <img src="Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="Logo Ohmyfood">
+                <img src="Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo-ohmyfood">
             </a>
         </nav>
 
@@ -32,14 +32,148 @@
     <main>
         <section class="welc-side">
             <h2>Réservez le menu qui vous convient</h2>
-            <span>Découvrez des restaurants d'exception, séléctionnés par nos soins</span>
-            <a class="explore-link" href="#">Explorer nos restaurants</a> <!-- Ajouter un ID  -->
+            <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+            <a class="explore-link" href="#">Explorer nos restaurants</a> <!-- ADD UN ID  -->
 
         </section>
 
+        <section class="function">
+
+            <h2>Fonctionnement</h2>
+
+            <ol class="function-cards">
+
+                <li class="function-list">
+                    <i class="fas fa-mobile-alt"></i>
+                    <span class="function-text">Choisissez un restaurant</span>
+                </li>
+
+                <li class="function-list">
+                    <i class="fas fa-list"></i>
+                    <span class="function-text">Composez votre menu</span>
+                </li>
+
+                <li class="function-list">
+                    <i class="fas fa-store"></i>
+                    <span class="function-text">Dégustez au restaurant</span>
+                </li>
+
+            </ol>
+
+        </section>
+
+        <section class="restaurants">
+            <h2>Restaurants</h2>
+            <ul class="restau-list">
+                <li class="restau-card">
+                    <a href="#">
+                        <figure>
+                            <img class="la-palette"
+                                src="Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                alt="la-palette-du-goût">
+                            <span>Nouveau</span>
+                            <figcaption>
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                                <i class="far fa-heart"></i>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li class="restau-card">
+                    <a href="#">
+                        <figure>
+                            <img class="la-note"
+                                src="Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                                alt="la-note-enchantée">
+                            <span>Nouveau</span>
+                            <figcaption>
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                                <i class="far fa-heart"></i>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li class="restau-card">
+                    <a href="#">
+                        <figure>
+                            <img class="a-la-francaise"
+                                src="Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                alt="a-la-française">
+
+                            <figcaption>
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
+                                <i class="far fa-heart"></i>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li class="restau-card">
+                    <a href="#">
+                        <figure>
+                            <img class="le-delice"
+                                src="Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                alt="le-délice-des-sens">
+
+                            <figcaption>
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                                <i class="far fa-heart"></i>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+            </ul>
+
+        </section>
 
     </main>
 
+    <footer>
+
+        <img src="Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="Logo-ohmyfood-footer">
+        <ul class="footer-list">
+            <li>
+                <a href="#">
+                    <i class="fas fa-utensils"></i>
+                    <span>Proposer un restaurant</span>
+                </a>
+
+            </li>
+
+            <li>
+                <a href="#">
+                    <i class="fas fa-hands-helping"></i>
+                    <span>Devenir partenaire</span>
+                </a>
+
+            </li>
+
+            <li>
+                <a href="#">
+                    <span>Mentions légales</span>
+                </a>
+
+            </li>
+
+            <li>
+                <a href="#">
+                    <!-- ça doit mener qlq à un mail -->
+                    <span>Contact</span>
+
+                </a>
+
+            </li>
+
+
+        </ul>
+    </footer>
 </body>
 
 </html>
