--- a/OmfTwo.html
+++ b/OmfTwo.html
@@ -42,19 +42,135 @@
             <h4>ENTRÉES</h4>
 
             <ol class="entrées-cards">
-                <li class="card">
+                <a href="#">
+                    <!-- Add un ID -->
 
+                    <li class="card">
+                        <h4>Tartare de poulpe acidulé</h4>
+                        <p>Aux zests d'orange</p>
+                        <span>25€</span>
+                    </li>
 
-                </li>
+                    <li class="card">
+                        <h4>Velouté de légumes d'antan</h4>
+                        <p>Carotte, panais, topinambour </p>
+                        <span>35€</span>
+                    </li>
 
-
+                    <li class="card">
+                        <h4>Soupe à l'oignon</h4>
+                        <p>Revisitée</p>
+                        <span>20€</span>
+                    </li>
+                </a>
             </ol>
+        </section>
 
+        <section class="plats">
+            <h4>PLATS</h4>
 
+            <ol class="plats-cards">
+                <a href="#">
+                    <!-- Add un ID -->
+
+                    <li class="card">
+                        <h4>Coquilles Saint-Jacques</h4>
+                        <p>Accompagnées d'une purée de panais</p>
+                        <span>40€</span>
+                    </li>
+
+                    <li class="card">
+                        <h4>Magret de canard</h4>
+                        <p>Et parmentier de pommes de terres</p>
+                        <span>35€</span>
+                    </li>
+
+                    <li class="card">
+                        <h4>Pigeonneau d'Ille-et-Vilaine</h4>
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <span>44€</span>
+                    </li>
+                </a>
+            </ol>
         </section>
 
 
+        <section class="desserts">
+            <h4>DESSERTS</h4>
+
+            <ol class="desserts-cards">
+                <a href="#">
+                    <!-- Add un ID -->
+
+                    <li class="card">
+                        <h4>Pétales de violettes glacés</h4>
+                        <p>Et purées de noisettes</p>
+                        <span>18€</span>
+                    </li>
+
+                    <li class="card">
+                        <h4>Fondant au chocolat</h4>
+                        <p>Revisité</p>
+                        <span>22€</span>
+                    </li>
+
+                    <li class="card">
+                        <h4>Millefeuille croustillant</h4>
+                        <p>Myrtilles et pâte d'amande</p>
+                        <span>23€</span>
+                    </li>
+                </a>
+            </ol>
+        </section>
+
+        <figure>
+            <button class="commander" type="button">Commander</button>
+
+        </figure>
     </main>
+
+    <footer>
+        <img src="Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="Logo-ohmyfood-footer">
+        <ul class="footer-list">
+            <li>
+                <a href="#">
+                    <i class="fas fa-utensils"></i>
+                    <span>Proposer un restaurant</span>
+                </a>
+
+            </li>
+
+            <li>
+                <a href="#">
+                    <i class="fas fa-hands-helping"></i>
+                    <span>Devenir partenaire</span>
+                </a>
+
+            </li>
+
+            <li>
+                <a href="#">
+                    <span>Mentions légales</span>
+                </a>
+
+            </li>
+
+            <li>
+                <a href="#">
+                    <!-- ça doit mener qlq à un mail -->
+                    <span>Contact</span>
+
+                </a>
+
+            </li>
+
+
+        </ul>
+
+
+    </footer>
+
+
 </body>
 
 </html>
