--- a/OmfMain.html
+++ b/OmfMain.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="OmfMain.css" />
     <script src="https://kit.fontawesome.com/72676ec4b6.js" crossorigin="anonymous"></script>
     <!-- Est-ce bon comme lien ? -->
-    <title>Ohmyfood!</title>
+    <title>Ohmyfood!-Accueil</title>
 </head>
 
 
@@ -18,7 +18,7 @@
         <nav class="nav-header">
             <a class="nav-logo" href="#">
                 <!-- Ajouter un ID -->
-                <img src="Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo-ohmyfood">
+                <img src="maquettes-ohmyfood/images/logo/ohmyfood.png" alt="logo-ohmyfood">
             </a>
         </nav>
 
@@ -69,7 +69,7 @@
                     <a href="#">
                         <figure>
                             <img class="la-palette"
-                                src="Maquettes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                src="maquettes-ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                                 alt="la-palette-du-goût">
                             <span>Nouveau</span>
                             <figcaption>
@@ -85,7 +85,7 @@
                     <a href="#">
                         <figure>
                             <img class="la-note"
-                                src="Maquettes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                                src="maquettes-ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                                 alt="la-note-enchantée">
                             <span>Nouveau</span>
                             <figcaption>
@@ -101,7 +101,7 @@
                     <a href="#">
                         <figure>
                             <img class="a-la-francaise"
-                                src="Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                src="maquettes-ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                                 alt="a-la-française">
 
                             <figcaption>
@@ -117,7 +117,7 @@
                     <a href="#">
                         <figure>
                             <img class="le-delice"
-                                src="Maquettes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                src="maquettes-ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                                 alt="le-délice-des-sens">
 
                             <figcaption>
@@ -137,7 +137,7 @@
 
     <footer>
 
-        <img src="Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="Logo-ohmyfood-footer">
+        <img src="maquettes-ohmyfood/images/logo/ohmyfood.png" alt="Logo-ohmyfood-footer">
         <ul class="footer-list">
             <li>
                 <a href="#">
