--- a/Omflanote.html
+++ b/Omflanote.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="OmfTwo.css" />
+    <link rel="stylesheet" href="Omflanote.css" />
     <script src="https://kit.fontawesome.com/72676ec4b6.js" crossorigin="anonymous"></script>
-    <title>Ohmyfood!</title>
+    <title>Ohmyfood!-La note enchantée</title>
 </head>
 
 <body>
@@ -16,13 +16,13 @@
             <a href="#">
                 <!-- Add un ID -->
                 <i class="fas fa-arrow-left"></i>
-                <img src="Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo-ohmyfood">
+                <img src="maquettes-ohmyfood/images/logo/ohmyfood.png" alt="logo-ohmyfood">
             </a>
 
         </nav>
 
         <figure>
-            <img src="Maquettes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="a-la-francaise">
+            <img src="maquettes-ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la-note-enchantée">
 
         </figure>
 
@@ -30,7 +30,7 @@
 
     <main>
         <header class="menu-head">
-            <h1>À la française</h1>
+            <h1>La note enchantée</h1>
 
             <nav class="nav-restau">
                 <i class="far fa-heart"></i>
@@ -46,21 +46,27 @@
                     <!-- Add un ID -->
 
                     <li class="card">
-                        <h4>Tartare de poulpe acidulé</h4>
-                        <p>Aux zests d'orange</p>
+                        <h4>Ravioles de foie gras</h4>
+                        <p>Accompagnés de leur crème à la truffe</p>
                         <span>25€</span>
                     </li>
 
                     <li class="card">
-                        <h4>Velouté de légumes d'antan</h4>
-                        <p>Carotte, panais, topinambour </p>
+                        <h4>Caviar osciètre</h4>
+                        <p>Sur blini à la farinne de blé noir</p>
                         <span>35€</span>
                     </li>
 
                     <li class="card">
-                        <h4>Soupe à l'oignon</h4>
-                        <p>Revisitée</p>
+                        <h4>Homard et espuma de potiron</h4>
+                        <p>Mariné aux zests d'orange</p>
                         <span>20€</span>
+                    </li>
+
+                    <li class="card">
+                        <h4>Foie gras de canard cuit entier</h4>
+                        <p>Confiture de figue et pain toasté</p>
+                        <span>35€</span>
                     </li>
                 </a>
             </ol>
@@ -74,20 +80,20 @@
                     <!-- Add un ID -->
 
                     <li class="card">
-                        <h4>Coquilles Saint-Jacques</h4>
-                        <p>Accompagnées d'une purée de panais</p>
-                        <span>40€</span>
-                    </li>
-
-                    <li class="card">
-                        <h4>Magret de canard</h4>
-                        <p>Et parmentier de pommes de terres</p>
+                        <h4>Noix de coquilles Saint-Jacques</h4>
+                        <p>Sur lit de purée de céleri-rave</p>
                         <span>35€</span>
                     </li>
 
                     <li class="card">
-                        <h4>Pigeonneau d'Ille-et-Vilaine</h4>
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <h4>Langoustine poêlée</h4>
+                        <p>Purée de patate douce</p>
+                        <span>35€</span>
+                    </li>
+
+                    <li class="card">
+                        <h4>Mijoté de queue de boeuf</h4>
+                        <p>Et riz sauvage aux zests de citron</p>
                         <span>44€</span>
                     </li>
                 </a>
@@ -103,20 +109,20 @@
                     <!-- Add un ID -->
 
                     <li class="card">
-                        <h4>Pétales de violettes glacés</h4>
-                        <p>Et purées de noisettes</p>
+                        <h4>Macaron noisette et chocolat </h4>
+                        <p>Glace au caramel brun et sel de Guérande</p>
                         <span>18€</span>
                     </li>
 
                     <li class="card">
-                        <h4>Fondant au chocolat</h4>
-                        <p>Revisité</p>
+                        <h4>Baba au rhum revisité</h4>
+                        <p>Avec son coulis de citron </p>
                         <span>22€</span>
                     </li>
 
                     <li class="card">
-                        <h4>Millefeuille croustillant</h4>
-                        <p>Myrtilles et pâte d'amande</p>
+                        <h4>Tarte au citron meringuée</h4>
+                        <p>Destructurée</p>
                         <span>23€</span>
                     </li>
                 </a>
@@ -130,7 +136,7 @@
     </main>
 
     <footer>
-        <img src="Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="Logo-ohmyfood-footer">
+        <img src="maquettes-ohmyfood/images/logo/ohmyfood.png" alt="Logo-ohmyfood-footer">
         <ul class="footer-list">
             <li>
                 <a href="#">
